dev: initial version of the test lib/utils

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-    }
+      "@jtheta/test": ["./dev/test/index"]
+    },
+    "target": "es2017"
   },
   "includes": "**/*.ts",
   "exclude": [
