--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "bluebird": "^3.5.1",
+    "colors": "^1.1.2",
     "fs-extra": "^5.0.0",
     "ts-node": "^4.1.0"
   }
