dev: standardize assert usage

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@jtheta/test": ["./dev/test/index"]
+      "@jtheta/test": ["./dev/test/index"],
+      "@jtheta/assert": ["./dev/assert/index"],
     },
     "target": "es2017"
   },
