--- a/package.json
+++ b/package.json
@@ -17,11 +17,20 @@
   },
   "homepage": "https://github.com/jtheta/src#readme",
   "devDependencies": {
+    "@babel/preset-typescript": "^7.0.0-beta.40",
     "glob": "^7.1.2",
+    "ts-loader": "^3.5.0",
     "tsc-node": "0.0.3",
-    "tsconfig-paths": "^3.1.1"
+    "tsconfig-paths": "^3.1.1",
+    "tsconfig-paths-webpack-plugin": "^2.0.0",
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0-beta.40",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "bluebird": "^3.5.1",
     "colors": "^1.1.2",
     "fs-extra": "^5.0.0",
