--- a/app/playground/package.json
+++ b/app/playground/package.json
@@ -3,18 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@timkendrick/monaco-editor": "0.0.9",
     "autoprefixer": "7.1.6",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
+    "esprima": "^4.0.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "0.11.2",
     "fork-ts-checker-webpack-plugin": "^0.2.8",
     "fs-extra": "3.0.1",
+    "grid-styled": "^3.2.1",
     "html-webpack-plugin": "2.29.0",
+    "ify-loader": "^1.1.0",
     "jest": "20.0.4",
     "object-assign": "4.1.1",
+    "plotly.js": "^1.34.0",
+    "polished": "^1.9.2",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
@@ -22,8 +28,12 @@
     "react": "^16.2.0",
     "react-dev-utils": "4.2.1",
     "react-dom": "^16.2.0",
+    "react-flexbox-grid": "^2.0.0",
+    "react-monaco-editor": "^0.13.0",
+    "react-plotly.js": "^1.6.0",
     "source-map-loader": "^0.2.1",
     "style-loader": "0.19.0",
+    "styled-components": "^3.1.6",
     "sw-precache-webpack-plugin": "0.11.4",
     "ts-jest": "^20.0.7",
     "ts-loader": "^2.3.7",
@@ -31,7 +41,6 @@
     "tslint": "^5.7.0",
     "tslint-react": "^3.2.0",
     "url-loader": "0.6.2",
-    "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
@@ -46,7 +55,12 @@
     "@types/node": "^9.4.6",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
-    "typescript": "^2.7.2"
+    "babel-plugin-styled-components": "^1.5.0",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
+    "typescript": "^2.7.2",
+    "typescript-plugin-styled-components": "0.0.5",
+    "webpack": "^3.8.1"
   },
   "jest": {
     "collectCoverageFrom": [
