--- a/app/playground/package.json
+++ b/app/playground/package.json
@@ -8,8 +8,10 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
+    "deeplearn": "^0.5.0",
     "dotenv": "4.0.0",
     "esprima": "^4.0.0",
+    "eventemitter3": "^3.0.1",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "0.11.2",
     "fork-ts-checker-webpack-plugin": "^0.2.8",
@@ -36,7 +38,6 @@
     "styled-components": "^3.1.6",
     "sw-precache-webpack-plugin": "0.11.4",
     "ts-jest": "^20.0.7",
-    "ts-loader": "^2.3.7",
     "tsconfig-paths-webpack-plugin": "^2.0.0",
     "tslint": "^5.7.0",
     "tslint-react": "^3.2.0",
@@ -58,6 +59,7 @@
     "babel-plugin-styled-components": "^1.5.0",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
+    "ts-loader": "^3.0.0",
     "typescript": "^2.7.2",
     "typescript-plugin-styled-components": "0.0.5",
     "webpack": "^3.8.1"
