--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "babel-preset-env": "^1.6.1",
     "bluebird": "^3.5.1",
     "colors": "^1.1.2",
+    "deeplearn": "^0.5.0",
+    "event-emitter": "^0.3.5",
     "fs-extra": "^5.0.0",
     "react": "^16.2.0",
+    "react-plotly.js": "^1.6.0",
     "ts-node": "^4.1.0",
     "typescript": "^2.7.2"
   }
