--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "paths": {
       "@jtheta/assert": ["./dev/assert/index"],
       "@jtheta/mat": ["./cmp/mat/api/index"],
-      "@jtheta/plot": ["./cmp/gfx/api/index"],
+      "@jtheta/ten": ["./cmp/ten/api/index"],
+      "@jtheta/run": ["./cmp/run/api/index"],
+      "@jtheta/gfx": ["./cmp/gfx/api/index"],
       "@jtheta/test": ["./dev/test/index"],
       "@internal/out": ["./dev/out/index"],
       "@internal/sh": ["./dev/sh/index"],
