--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
       "@jtheta/assert": ["./dev/assert/index"],
       "@jtheta/mat": ["./cmp/mat/api/index"],
       "@jtheta/ten": ["./cmp/ten/api/index"],
+      "@jtheta/tra": ["./cmp/tra/api/index"],
       "@jtheta/run": ["./cmp/run/api/index"],
       "@jtheta/gfx": ["./cmp/gfx/api/index"],
       "@jtheta/test": ["./dev/test/index"],
